--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,14 @@ body {
   background-color: rgb(31, 41, 55);
   color: rgb(160, 159, 172);
 }
+.center {
+  display: flex;
+  justify-content: center;
+}
+.select {
+  color: var(--bg-orange);
+  width: 200px;
+  padding: 3px;
+  border-radius: 20px;
+  margin-top: 20px;
+}
